Cargue Se encarga de realizar el desarrollo para cargar datos por medio de cargues y ajustes de estructura, aun se encuentra problema con la lectura de datos no obtiene los parametros cargados.

--- a/pyt-contabilidad/pyt-app/src/main/resources/view/config/servicios/loaderConfig.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/config/servicios/loaderConfig.fxml
@@ -21,7 +21,7 @@
                 <Insets left="5.0" right="5.0" />
               </HBox.margin>
             </Button>
-            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" />
+            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#cancel" text="Cancelar" />
           </children>
           <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
