--- a/pyt-contabilidad/pyt-app/src/main/resources/view/guiaIngresos/ingresos.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/guiaIngresos/ingresos.fxml
@@ -85,11 +85,7 @@
 				<TableView fx:id="tablaRepuesto" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.columnSpan="2"
 					GridPane.rowIndex="9">
 					<columns>
-						<TableColumn id="nombre" maxWidth="5000.0" minWidth="10.0" prefWidth="186.0" text="Nombre">
-							<cellValueFactory>
-								<PropertyValueFactory property="nombre" />
-							</cellValueFactory>
-						</TableColumn>
+						<TableColumn fx:id="nombre" maxWidth="5000.0" minWidth="10.0" prefWidth="186.0" text="Nombre"/>
 						<TableColumn id="valorVenta" maxWidth="5000.0" minWidth="10.0" prefWidth="100.0" text="Valor">
 							<cellValueFactory>
 								<PropertyValueFactory property="valorVenta" />
