--- a/pyt-contabilidad/pyt-app/src/main/resources/view/repuesto/repuesto.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/repuesto/repuesto.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.*?>
 
-<BorderPane fx:id="pane" maxHeight="-1.0" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="193.0" prefWidth="489.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.repuesto.RepuestoCRUBean">
+<BorderPane fx:id="pane" maxHeight="-1.0" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="333.0" prefWidth="489.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.repuesto.RepuestoCRUBean">
   <bottom>
-    <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="0.0" prefWidth="489.0" BorderPane.alignment="CENTER">
+    <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="33.0" prefWidth="489.0" BorderPane.alignment="CENTER">
       <children>
         <Button mnemonicParsing="false" onAction="#add" text="Guardar" />
         <Button mnemonicParsing="false" onAction="#cancel" text="Cancelar">
@@ -26,20 +26,30 @@
     </FlowPane>
   </bottom>
   <center>
-    <GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="109.0" prefWidth="469.0" BorderPane.alignment="CENTER">
+    <GridPane alignment="CENTER" hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="192.0" prefWidth="469.0" vgap="5.0" BorderPane.alignment="CENTER">
       <children>
         <Label alignment="CENTER" prefHeight="33.0" prefWidth="88.0" text="Codigo" />
         <Label fx:id="codigo" alignment="CENTER" contentDisplay="CENTER" prefHeight="38.0" prefWidth="163.0" textAlignment="CENTER" GridPane.columnIndex="1" />
         <Label alignment="CENTER" prefHeight="29.0" prefWidth="70.0" text="Nombre" textAlignment="CENTER" GridPane.columnIndex="2" />
-        <TextField fx:id="nombre" GridPane.columnIndex="3" />
-        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="29.0" prefWidth="76.0" text="\% Iva" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-        <TextField id="orden" fx:id="porcentajeIva" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="27.0" prefWidth="90.0" text="Valor Mercado" GridPane.rowIndex="2" />
-        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" text="Valor Venta" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-        <TextField fx:id="valorVenta" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-        <TextField fx:id="valorMercado" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <TextField fx:id="nombre" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" />
         <Label alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" text="Referencia" textAlignment="CENTER" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-        <TextField fx:id="referencia" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <TextField fx:id="referencia" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <TextArea fx:id="descripcion" prefHeight="84.0" prefWidth="364.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="4" />
+        <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Descripcion" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+        <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Valor Venta" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+        <TextField fx:id="valorVenta" disable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+        <TextField fx:id="valorMercado" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="27.0" prefWidth="90.0" text="Valor Mercado" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+        <Label alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="29.0" prefWidth="76.0" text="\% Iva" GridPane.columnIndex="0" GridPane.rowIndex="2">
+          <labelFor>
+            <ChoiceBox fx:id="choiceBoxIva" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+          </labelFor>
+        </Label>
+        <fx:reference source="choiceBoxIva" />
+        <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Cantidad" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+        <TextField fx:id="cantidad" disable="true" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+        <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="\% Ganancia" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+        <TextField fx:id="percentGanancia" disable="false" editable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
       </children>
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="171.0" minWidth="10.0" prefWidth="104.0" />
@@ -51,10 +61,11 @@
         <Insets bottom="10.0" />
       </padding>
       <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="33.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="29.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="81.0" minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
       </rowConstraints>
       <BorderPane.margin>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -68,6 +79,9 @@
           <font>
             <Font name="System Bold Italic" size="18.0" />
           </font>
+          <FlowPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+          </FlowPane.margin>
         </Label>
       </children>
       <BorderPane.margin>
