--- a/pyt-contabilidad/pyt-app/src/main/resources/view/repuesto/repuesto.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/repuesto/repuesto.fxml
@@ -11,12 +11,13 @@
 
 <BorderPane fx:id="pane" maxHeight="-1.0" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="333.0" prefWidth="489.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.repuesto.RepuestoCRUBean">
   <bottom>
-    <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="33.0" prefWidth="489.0" BorderPane.alignment="CENTER">
+    <FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="5.0" prefHeight="33.0" prefWidth="489.0" vgap="5.0" BorderPane.alignment="CENTER">
       <children>
         <Button mnemonicParsing="false" onAction="#add" text="Guardar" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#agregarMovimiento" text="Movimiento" />
         <Button mnemonicParsing="false" onAction="#cancel" text="Cancelar">
           <FlowPane.margin>
-            <Insets left="10.0" />
+            <Insets />
           </FlowPane.margin>
         </Button>
       </children>
