--- a/pyt-contabilidad/pyt-app/src/main/resources/view/repuesto/repuesto.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/repuesto/repuesto.fxml
@@ -14,7 +14,7 @@
     <FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="5.0" prefHeight="33.0" prefWidth="489.0" vgap="5.0" BorderPane.alignment="CENTER">
       <children>
         <Button mnemonicParsing="false" onAction="#add" text="Guardar" />
-        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#agregarMovimiento" text="Movimiento" />
+        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#agregarMovimiento" text="Agregar Unidades" />
         <Button mnemonicParsing="false" onAction="#cancel" text="Cancelar">
           <FlowPane.margin>
             <Insets />
