--- a/pyt-contabilidad/pyt-app/src/main/resources/view/empresa/empresa.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/empresa/empresa.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
+<?import org.ea.app.custom.PopupParametrizedControl?>
 
 <BorderPane fx:id="pane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
 	prefWidth="489.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
@@ -63,17 +64,7 @@
 				<Label alignment="CENTER" prefHeight="28.0" prefWidth="68.0" text="Pais" GridPane.columnIndex="2" GridPane.rowIndex="3" />
 				<TextField fx:id="pais" GridPane.columnIndex="3" GridPane.rowIndex="3" />
 				<Label alignment="CENTER" prefHeight="28.0" prefWidth="90.0" text="Moneda" GridPane.rowIndex="4" />
-				<HBox alignment="CENTER" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
-				    <TextField fx:id="moneda" alignment="CENTER"  />
-					<Button  mnemonicParsing="false" onAction="#monedas" >
-						<graphic>
-							<FontIcon iconLiteral="fa-search" iconColor="black"/>
-						</graphic>
-					</Button>
-				</HBox>
-				<!--
-				<ChoiceBox fx:id="moneda" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-				-->
+				<PopupParametrizedControl fx:id="moneda"  GridPane.columnIndex="1" GridPane.rowIndex="4" />
 				
 				<Label alignment="CENTER" prefHeight="30.0" prefWidth="87.0" text="Contador" GridPane.rowIndex="5" />
 				<TextField fx:id="contador" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="5" />
