--- a/pyt-contabilidad/pyt-app/src/main/resources/view/splash/splash.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/splash/splash.fxml
@@ -3,13 +3,14 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
- 
+ <?import javafx.scene.control.*?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.ea.app.load.ControllerSplash">
    <children>
       <ImageView fx:id="fondo" fitHeight="400.0" fitWidth="600.0" pickOnBounds="true">
          <image>
-            <Image url="@../recursos/fondo.jpg" />
+            <Image url="@../../images/ok.png" />
          </image>
       </ImageView>
+      <Label>Easy Accounting By JAPL </Label>
    </children>
 </AnchorPane>
