--- a/pyt-contabilidad/pyt-app/src/main/resources/view/persona/personas.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/persona/personas.fxml
@@ -43,6 +43,10 @@
         <TextField fx:id="direccion" GridPane.columnIndex="3" GridPane.rowIndex="3" />
         <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="27.0" prefWidth="75.0" text="Email" GridPane.columnIndex="0" GridPane.rowIndex="4" />
         <TextField fx:id="email" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="27.0" prefWidth="75.0" text="Profesion" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+        <PopupParametrizedControl fx:id="profesion"  GridPane.columnIndex="1" GridPane.rowIndex="5" />
+        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="27.0" prefWidth="75.0" text="Numero Tarjeta Profesional" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+        <TextField fx:id="numeroTarjetaProfesional" GridPane.columnIndex="3" GridPane.rowIndex="5" />
         <DatePicker fx:id="fechaNacimiento" GridPane.columnIndex="1" GridPane.rowIndex="7" />
         <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="27.0" prefWidth="75.0" text="Fecha de Nacimiento" underline="false" wrapText="true" GridPane.columnIndex="0" GridPane.rowIndex="7" />
       </children>
