DBH2 Se realiza ajsutes de tareas para su correcto funcionamienot

--- a/pyt-contabilidad/pyt-app/src/main/resources/view/centroCosto/centroCosto.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/centroCosto/centroCosto.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.*?>
+<?import org.ea.app.custom.PopupParametrizedControl?>
 
 <BorderPane fx:id="pane" maxHeight="-1.0" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="193.0"
 	prefWidth="489.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2"
@@ -43,6 +44,9 @@
 				<TextField fx:id="orden" GridPane.columnIndex="3" GridPane.rowIndex="1" />
 				<Label alignment="CENTER" prefHeight="27.0" prefWidth="90.0" text="Estado" GridPane.rowIndex="2" />
 				<ChoiceBox fx:id="estado" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+				<Label maxWidth="1.7976931348623157E308" text="Empresa" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+				<PopupParametrizedControl fx:id="empresa" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+				
 			</children>
 			<columnConstraints>
 				<ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="77.0" />
